fixade så att en gorisontell scrollbar inte dök upp och så att advertisement-grid:arna krympte med skärmbredden i datorlayouten.

--- a/css/style.css
+++ b/css/style.css
@@ -678,7 +678,7 @@ a:hover{
         flex-direction: row;
         justify-content: space-around;
         align-items: center;
-        background-color: rgb(131, 66, 177);
+        /* background-color: rgb(131, 66, 177); */
         position: inherit;
         /* right: 0px;
         top: -100vh; */
@@ -701,8 +701,38 @@ a:hover{
     }
 
     .advertisement{
+        display: flex;
+        /* flex-direction: column; */
         margin: 10px;
-        box-shadow: 0px 0px 10px rgb(196, 196, 196);
+        justify-content: space-evenly;
+        align-items: center;
+        /* min(5px, 5%); */
+        /* max(-10px, 10px); */
+
+        /* 10px */
+        /* clamp(1px, 2vw, 10px); */
+        /* box-shadow: 0px 0px 10px rgb(196, 196, 196); */
+    }
+
+    .advertisement_img{
+        width: 80%;
+        height: auto;
+        margin-left: 10%;
+        margin-right: 10%;
+        /* object-fit: fill; */
+    }
+/* 
+    .advertisement_img{
+        width: minmax(100px, 100%);
+        height: auto;
+    } */
+
+    #welcome_text{
+        font-size: 4rem;
+    }
+
+    h1{
+        font-size: 4rem;
     }
 
     h2{
@@ -710,7 +740,7 @@ a:hover{
     }
 
     h3{
-        font-size: 1.3rem;
+        font-size: 2rem;
         margin-top: 10px;
         margin-bottom: 5px;
     }
